cleanup, modify certificate to deviceCertificate
